--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/cosmos": "^3.15.1"
+    "@azure/cosmos": "^3.15.1",
+    "@azure/storage-blob": "^12.9.0"
   }
 }
